<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorWhite">


    <TextView
        android:id="@+id/radio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_radio_title"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textColor="@color/colorOrange"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp">

        <RadioButton
            android:id="@+id/rb_fruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClickRadio"
            android:text="@string/rb_fruit"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/rb_veges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClickRadio"
            android:text="@string/rb_veges"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/rb_berry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClickRadio"
            android:text="@string/rb_berry"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/rb_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClickRadio"
            android:text="@string/rb_water"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

    </RadioGroup>


</LinearLayout>
