<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.CheckActivity">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ch_fruit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/ch_fruit"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"  />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ch_veges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/ch_veges"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"  />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ch_berry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/ch_berry"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"  />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ch_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/ch_water"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/btn_order" />

</LinearLayout>