<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Filled text field
        Заполненные текстовые поля имеют больший визуальный акцент, чем выделенные текстовые поля,
        выделяя их, когда они окружены другим содержимым и компонентами.
        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/tf_filled">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Outlined text field
         Выделенные текстовые поля имеют меньший визуальный акцент, чем заполненные
         текстовые поля. Когда они появляются в таких местах, как формы, где много
         текстовых полей размещены вместе, их уменьшенный акцент помогает упростить макет.
         -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tf_outlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Тип ввода пароль -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tf_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Пароль и иконкой
        TextInputLayout предоставляет определенные предварительно упакованные EndIconModes,
        которые поставляются с определенным поведением.
         -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tf_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Text field с маской телефона
         com.santalu.maskedittext.MaskEditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/et_phone_mask">

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/et_phone_mask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:met_mask="+123(###) ### ## ##" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_phone_mask"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/btn_phone_mask"
            android:onClick="showMaskedPhone"/>


        <!-- Text field только цифры и ограничением ввода символов -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tf_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"/>
        </com.google.android.material.textfield.TextInputLayout>


       <!-- Text field с иконкой
        В качестве конечного значка EditText можно установить настраиваемый
        рисунок или кнопку через endIconMode = "custom".
        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tf_icon"
            app:endIconMode="custom"
            app:endIconTint="@color/colorOrange"
            app:endIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tf_icon"
            app:startIconTint="@color/colorBlueGreen"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>
</ScrollView>